# xsd_assert_example

./: .gitignore  README.md  ids.xsd  ids_fail.xml  ids_pass.xml  pyproject.toml  test.py
