[tool.poetry]
name = "xml_assert_example"
version = "0.1.0"
description = ""
authors = ["AJ Slater <aj@slater.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
xmlschema = "^3.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
